templates/01-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  type: ClusterIP
  selector:
    name: example-app
  ports:
    - port: 80
      targetPort: 8080
